# rsms

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/rsms-business/: Cargo.toml
crates/rsms-business/src/: lib.rs
crates/rsms-codec-cmpp/: Cargo.toml
crates/rsms-codec-cmpp/src/: auth.rs  codec.rs  frame.rs  header.rs  lib.rs  message.rs  registry.rs  version.rs
crates/rsms-codec-cmpp/src/datatypes/: active_test.rs  command_id.rs  connect.rs  deliver.rs  mod.rs  query.rs  submit.rs  terminate.rs  v20.rs
crates/rsms-codec-cmpp/tests/: protocol_flow.rs
crates/rsms-codec-sgip/: Cargo.toml
crates/rsms-codec-sgip/src/: codec.rs  frame.rs  lib.rs  message.rs  registry.rs
crates/rsms-codec-sgip/src/datatypes/: bind.rs  command_id.rs  deliver.rs  mod.rs  sgip_sequence.rs  submit.rs  unbind.rs
crates/rsms-codec-smgp/: Cargo.toml
crates/rsms-codec-smgp/src/: auth.rs  codec.rs  frame.rs  lib.rs  message.rs  registry.rs
crates/rsms-codec-smgp/src/datatypes/: active_test.rs  command_id.rs  deliver.rs  login.rs  mod.rs  msg_id.rs  submit.rs  tlv.rs
crates/rsms-codec-smpp/: Cargo.toml
crates/rsms-codec-smpp/src/: codec.rs  frame.rs  lib.rs  message.rs  registry.rs  submit_decode.rs  submit_v34.rs  submit_v50.rs  tests.rs  version.rs
crates/rsms-codec-smpp/src/datatypes/: address.rs  bind_receiver.rs  bind_transceiver.rs  bind_transmitter.rs  cancel_sm.rs  command_id.rs  command_status.rs  data_coding.rs  deliver_sm.rs  enquire_link.rs  generic_nack.rs  mod.rs  query_sm.rs  submit_sm.rs  tlv.rs  unbind.rs
crates/rsms-codec-smpp/tests/: smpp_version_test.rs
crates/rsms-connector/: Cargo.toml
crates/rsms-connector/src/: client.rs  client_pool.rs  connection.rs  id_generator.rs  lib.rs  pool.rs  protocol.rs  server.rs
crates/rsms-connector/src/handlers/: cmpp.rs  mod.rs  sgip.rs  smgp.rs  smpp.rs
crates/rsms-connector/src/transaction/: cmpp.rs  mod.rs  sgip.rs  smgp.rs  smpp.rs
crates/rsms-core/: Cargo.toml
crates/rsms-core/src/: connection_info.rs  cstring.rs  encoded_pdu.rs  endpoint.rs  error.rs  frame.rs  id_generator.rs  lib.rs  pstring.rs  session.rs  shutdown.rs
crates/rsms-longmsg/: Cargo.toml
crates/rsms-longmsg/src/: cache.rs  frame.rs  lib.rs  merge.rs  reference_id.rs  segment_bitmap.rs  split.rs
crates/rsms-longmsg/tests/: split_merge.rs
crates/rsms-pipeline/: Cargo.toml
crates/rsms-pipeline/src/: builder.rs  error.rs  layer.rs  lib.rs  service.rs
crates/rsms-pipeline/src/handlers/: frame_decoder.rs  mod.rs  protocol_decoder.rs  rate_limiter.rs  session.rs
crates/rsms-ratelimit/: Cargo.toml
crates/rsms-ratelimit/src/: lib.rs  smooth_rate_limiter.rs
crates/rsms-session/: Cargo.toml
crates/rsms-session/src/: heartbeat.rs  lib.rs  state_machine.rs
crates/rsms-window/: Cargo.toml
crates/rsms-window/src/: error.rs  future.rs  lib.rs  window.rs
docs/: README.md
docs/guides/: 01-quickstart.md  02-protocols.md  03-longmessage.md  04-dynamic-adjustment.md  05-logging.md
docs/protocols/: 01-cmpp.md  02-smgp.md  03-smpp.md  04-sgip.md
docs/reference/: 01-tests.md
examples/cmpp-endpoint/: Cargo.toml
examples/cmpp-endpoint/src/: client.rs  server.rs
examples/cmpp-endpoint/tests/: cmpp20_test.rs  cmpp_longmsg_test.rs  cmpp_test.rs  cmpp_test_client.rs  mod.rs  multi_account_stress_test.rs  stress_test.rs  transaction_manager_test.rs
examples/cmpp_client/: Cargo.toml  README.md  messages.conf
examples/cmpp_client/src/: main.rs
examples/cmpp_server/: Cargo.toml  README.md  accounts.conf  messages.conf
examples/cmpp_server/src/: main.rs
examples/sgip-endpoint/: Cargo.toml  sgip-endpoint-analysis.md
examples/sgip-endpoint/src/: client.rs  server.rs
examples/sgip-endpoint/tests/: dynamic_connection_test.rs  mod.rs  multi_account_stress_test.rs  sgip_longmsg_test.rs  stress_test.rs
examples/sgip_client/: Cargo.toml  README.md  messages.conf
examples/sgip_client/src/: main.rs
examples/sgip_server/: Cargo.toml  README.md  accounts.conf  messages.conf
examples/sgip_server/src/: main.rs
examples/smgp-endpoint/: Cargo.toml  smgp-endpoint-analysis.md
examples/smgp-endpoint/src/: client.rs  server.rs
examples/smgp-endpoint/tests/: mod.rs  multi_account_stress_test.rs  stress_test.rs
examples/smgp_client/: Cargo.toml  README.md  messages.conf
examples/smgp_client/src/: main.rs
examples/smgp_server/: Cargo.toml  README.md  accounts.conf  messages.conf
examples/smgp_server/src/: main.rs
examples/smpp-endpoint/: Cargo.toml  smpp-endpoint-analysis.md
examples/smpp-endpoint/src/: client.rs  server.rs
examples/smpp-endpoint/tests/: mod.rs  multi_account_stress_test.rs  stress_test.rs
examples/smpp_client/: Cargo.toml  README.md  messages.conf
examples/smpp_client/src/: main.rs
examples/smpp_server/: Cargo.toml  README.md  accounts.conf  messages.conf
examples/smpp_server/src/: main.rs
tests/: Cargo.toml
tests/cmpp/: cmpp_test.rs  cmpp_test_server.rs  dynamic_connection_test.rs  multi_account_stress_test.rs  stress_test.rs  transaction_integration_test.rs
tests/common/: Cargo.toml
tests/common/src/: account_config.rs  event_handlers.rs  lib.rs  message_source.rs  server.rs  stats.rs  stress_message_source.rs  stress_utils.rs
tests/sgip/: integration.rs  multi_account_stress_test.rs  stress_test.rs
tests/smgp/: dynamic_connection_test.rs  integration.rs  multi_account_stress_test.rs  smgp_longmsg_test.rs  stress_test.rs
tests/smpp/: dynamic_connection_test.rs  integration.rs  multi_account_stress_test.rs  smpp_longmsg_test.rs  stress_test.rs
