[package]
name = "rsms-codec-cmpp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CMPP length framing and message codecs"

[dependencies]
bytes.workspace = true
md-5.workspace = true
num_enum.workspace = true
rsms-core = { path = "../rsms-core" }
thiserror.workspace = true
