[package]
name = "rsms-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and errors for rsms SMS gateway"

[dependencies]
bytes.workspace = true
thiserror.workspace = true
encoding_rs.workspace = true
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tracing.workspace = true
