[package]
name = "cmpp-endpoint-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cmpp-endpoint-client"
path = "src/client.rs"

[[bin]]
name = "cmpp-endpoint-server"
path = "src/server.rs"

[[test]]
name = "cmpp-integration-tests"
path = "tests/mod.rs"

[[test]]
name = "multi-account-stress-test"
path = "tests/multi_account_stress_test.rs"

[[test]]
name = "cmpp-longmsg-test"
path = "tests/cmpp_longmsg_test.rs"

[[test]]
name = "dynamic-connection-test"
path = "tests/dynamic_connection_test.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
bytes.workspace = true

rsms-core = { path = "../../crates/rsms-core" }
rsms-connector = { path = "../../crates/rsms-connector" }
rsms-business = { path = "../../crates/rsms-business" }
rsms-codec-cmpp = { path = "../../crates/rsms-codec-cmpp" }
rsms-session = { path = "../../crates/rsms-session" }

[dev-dependencies]
dashmap.workspace = true
rsms-longmsg = { path = "../../crates/rsms-longmsg" }
