[package]
name = "sgip-endpoint-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sgip-endpoint-client"
path = "src/client.rs"

[[bin]]
name = "sgip-endpoint-server"
path = "src/server.rs"

[[test]]
name = "sgip-integration-tests"
path = "tests/mod.rs"

[[test]]
name = "sgip-stress-test"
path = "tests/stress_test.rs"

[[test]]
name = "sgip-multi-account-stress-test"
path = "tests/multi_account_stress_test.rs"

[[test]]
name = "sgip-longmsg-test"
path = "tests/sgip_longmsg_test.rs"

[[test]]
name = "sgip-dynamic-connection-test"
path = "tests/dynamic_connection_test.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
bytes.workspace = true

rsms-core = { path = "../../crates/rsms-core" }
rsms-connector = { path = "../../crates/rsms-connector" }
rsms-business = { path = "../../crates/rsms-business" }
rsms-session = { path = "../../crates/rsms-session" }
rsms-codec-sgip = { path = "../../crates/rsms-codec-sgip" }
dashmap.workspace = true

[dev-dependencies]
rsms-longmsg = { path = "../../crates/rsms-longmsg" }
