[package]
name = "smgp-endpoint-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "smgp-endpoint-client"
path = "src/client.rs"

[[bin]]
name = "smgp-endpoint-server"
path = "src/server.rs"

[[test]]
name = "smgp-integration-tests"
path = "tests/mod.rs"

[[test]]
name = "smgp-stress-test"
path = "tests/stress_test.rs"

[[test]]
name = "smgp-multi-account-stress-test"
path = "tests/multi_account_stress_test.rs"

[[test]]
name = "smgp-longmsg-test"
path = "tests/smgp_longmsg_test.rs"

[[test]]
name = "smgp-dynamic-connection-test"
path = "tests/dynamic_connection_test.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
bytes.workspace = true

rsms-core = { path = "../../crates/rsms-core" }
rsms-connector = { path = "../../crates/rsms-connector" }
rsms-business = { path = "../../crates/rsms-business" }
rsms-session = { path = "../../crates/rsms-session" }
rsms-codec-smgp = { path = "../../crates/rsms-codec-smgp" }

[dev-dependencies]
dashmap.workspace = true
rsms-longmsg = { path = "../../crates/rsms-longmsg" }
