[package]
name = "smpp-endpoint-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "smpp-endpoint-client"
path = "src/client.rs"

[[bin]]
name = "smpp-endpoint-server"
path = "src/server.rs"

[[test]]
name = "smpp-integration-tests"
path = "tests/mod.rs"

[[test]]
name = "smpp-stress-test"
path = "tests/stress_test.rs"

[[test]]
name = "smpp-multi-account-stress-test"
path = "tests/multi_account_stress_test.rs"

[[test]]
name = "smpp-longmsg-test"
path = "tests/smpp_longmsg_test.rs"

[[test]]
name = "smpp-dynamic-connection-test"
path = "tests/dynamic_connection_test.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
bytes.workspace = true

rsms-core = { path = "../../crates/rsms-core" }
rsms-connector = { path = "../../crates/rsms-connector" }
rsms-business = { path = "../../crates/rsms-business" }
rsms-session = { path = "../../crates/rsms-session" }
rsms-codec-smpp = { path = "../../crates/rsms-codec-smpp" }

[dev-dependencies]
dashmap.workspace = true
rsms-longmsg = { path = "../../crates/rsms-longmsg" }
